<resources>
    <!-- General -->
    <string name="app_name">Warehouse Product Scanner</string>
    <string name="action_continue">Continue</string>
    <string name="request_failed">Request failed</string>
    <string name="camera_unavailable_message">Please allow camera usage to add photos</string>

    <!-- Login and Register shared -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="invalid_username">Username is required</string>
    <string name="invalid_password">Password is required</string>

    <!-- Login -->
    <string name="login_title">Login to Product Scanner</string>
    <string name="action_log_in">Log in</string>
    <string name="action_register">Create New Account</string>
    <string name="invalid_credentials">Wrong credentials</string>
    <string name="login_error_server">Error logging in (Server error)</string>
    <string name="login_error_unknown">Error logging in (Unknown error)</string>
    <string name="login_error_forbidden">Sorry, this user does not have necessary permissions</string>

    <!-- Register -->
    <string name="register_title">Create Account</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="invalid_password_match">Passwords must match</string>
    <string name="register_error_server">Error creating account (Server error)</string>
    <string name="register_error_unknown">Error creating account (Unknown error)</string>
    <string name="account_created">Account created</string>
    <string name="notif_account_created_title">Account Created</string>
    <string name="notif_account_created_content">Hello %1$s! You may now log in to the app using credentials from registration</string>

    <!-- Nav menu -->
    <string name="nav_menu_about">About</string>
    <string name="nav_menu_add_product">Add Product</string>
    <string name="nav_menu_search">Search</string>

    <!-- About screen -->
    <string name="hello_banner">Hello %1$s</string>
    <string name="about_roles">Roles assigned to you</string>
    <string name="about_warehouse">About warehouse operations</string>
    <string name="about_warehouse_content">
        "The application provides access to product details service.
        \nUser can view existing products and add new ones.
        \nSetup of this data enables products to be packed by autonomous robots in the warehouse."
    </string>
    <string name="role_read_bulk_description">Allows to view batches of product details</string>
    <string name="role_read_description">Allows to view product details</string>
    <string name="role_write_description">Allows to edit product details</string>
    <string name="role_unknown_description">Unknown role</string>

    <!-- Add product screen -->
    <string name="add_product_banner">Create new product</string>
    <string name="section_general_attributes">General attributes</string>
    <string name="section_physical_parameters">Physical parameters</string>
    <string name="subsection_storage_temperature">Storage temperature</string>
    <string name="subsection_measurements">Measurements</string>
    <string name="section_barcodes">Barcodes</string>
    <string name="product_photo_description">Product photo</string>
    <string name="hint_product_id">Product ID</string>
    <string name="hint_description">Description</string>
    <string name="radio_ambient">Ambient</string>
    <string name="radio_chilled">Chilled</string>
    <string name="hint_height">Height (mm)</string>
    <string name="hint_width">Width (mm)</string>
    <string name="hint_length">Length (mm)</string>
    <string name="hint_weight">Weight (kg)</string>
    <string name="action_create_product">Create</string>
    <string name="action_delete_barcode">Delete</string>
    <string name="hint_barcode_value">Barcode value</string>
    <string name="product_id_required">Product ID is required</string>
    <string name="height_required">Height is required</string>
    <string name="width_required">Width is required</string>
    <string name="length_required">Length is required</string>
    <string name="weight_required">Weight is required</string>
    <string name="height_above_zero">Height must be greater than zero</string>
    <string name="width_above_zero">Width must be greater than zero</string>
    <string name="length_above_zero">Length must be greater than zero</string>
    <string name="weight_above_zero">Weight must be greater than zero</string>
    <string name="product_created">Product created successfully</string>
    <string name="create_error_server">Error creating product (Server error)</string>
    <string name="create_error_unknown">Error creating product (Unknown error)</string>
    <string name="image_upload_success">Image upload successful</string>
    <string name="image_upload_fail">Image upload failed</string>

    <!-- Search screen -->
    <string name="search_banner">Search</string>
    <string name="search_product_hint">Enter product ID or barcode</string>
    <string name="invalid_product_id">Product ID is invalid</string>
    <string name="action_scan_barcode">Scan barcode</string>
    <string name="action_search_product">Search Product</string>
    <string name="search_error_not_found">Product not found</string>
    <string name="search_error_server">Error searching for product (Server error)</string>
    <string name="search_error_unknown">Error searching for product (Unknown error)</string>
    <string name="add_barcode_description">Add barcode</string>

    <!-- View product screen -->
    <string name="view_product_banner">Product view</string>
    <string name="height_label">Height</string>
    <string name="width_label">Width</string>
    <string name="length_label">Length</string>
    <string name="weight_label">Weight</string>
    <string name="weight_unit">kg</string>
    <string name="measure_unit">mm</string>

</resources>
