<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_product_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:text="@string/add_product_banner"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/product_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/button_create_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_product_banner">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/section_general_attributes"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/product_photo_description"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/photo_placeholder" />

                <LinearLayout android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_productid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:hint="@string/hint_product_id"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:paddingTop="40dp" />

                    <EditText
                        android:id="@+id/edit_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:hint="@string/hint_description"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:paddingTop="25dp" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/section_physical_parameters"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subsection_storage_temperature"
                        android:textStyle="bold" />

                    <RadioButton
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/radio_ambient" />

                    <RadioButton
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"

                        android:layout_margin="6dp"
                        android:text="@string/radio_chilled" />

                </RadioGroup>

                <LinearLayout android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/subsection_measurements"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_height"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:hint="@string/hint_height"
                        android:importantForAutofill="no"
                        android:inputType="numberSigned" />

                    <EditText
                        android:id="@+id/edit_width"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:hint="@string/hint_width"
                        android:importantForAutofill="no"
                        android:inputType="numberSigned" />

                    <EditText
                        android:id="@+id/edit_length"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:hint="@string/hint_length"
                        android:importantForAutofill="no"
                        android:inputType="numberSigned" />

                    <EditText
                        android:id="@+id/edit_weight"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:hint="@string/hint_weight"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/section_barcodes"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/barcodes_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_span="2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/button_add_barcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_span="2"
                    android:backgroundTint="@color/purple_500"
                    android:contentDescription="@string/add_barcode_description"
                    android:minWidth="120dp"
                    android:minHeight="70dp"
                    android:src="@drawable/ic_baseline_add_to_list"
                    app:tint="@color/white" />
            </TableRow>
        </TableLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/button_create_product"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/action_create_product"
        app:layout_constraintTop_toBottomOf="@id/product_scroll_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
