<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/view_product_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:text="@string/view_product_banner"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/product_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_product_banner">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/section_general_attributes"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/product_photo_description"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/photo_placeholder" />

                <LinearLayout android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:padding="5dp"
                        android:text="@string/hint_product_id"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/static_productid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:hint="@string/hint_product_id"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/hint_description"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/static_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:hint="@string/hint_description"
                        android:padding="5dp"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/section_physical_parameters"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <RadioGroup
                    android:id="@+id/radio_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subsection_storage_temperature"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/static_radio_temp_ambient"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:enabled="false"
                        android:text="@string/radio_ambient"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/static_radio_temp_chilled"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:enabled="false"
                        android:text="@string/radio_chilled"
                        android:textColor="@color/black" />

                </RadioGroup>

                <LinearLayout android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/subsection_measurements"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/height_label"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/static_height"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="@string/hint_height"
                            android:textAlignment="center"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/width_label"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/static_width"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="@string/hint_width"
                            android:textAlignment="center"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/length_label"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/static_length"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="@string/hint_length"
                            android:textAlignment="center"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/weight_label"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/static_weight"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="@string/hint_weight"
                            android:textAlignment="center"
                            android:textColor="@color/black" />
                    </LinearLayout>

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/section_barcodes"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/static_barcodes_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_span="2" />
            </TableRow>

        </TableLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
