<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/search_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:text="@string/search_banner"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/search_id"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="26dp"
        android:gravity="center_horizontal"
        android:hint="@string/search_product_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_banner" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:selectAllOnFocus="true"
        app:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_id"
        app:rowCount="1">

        <Button
            android:id="@+id/button_scan"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:text="@string/action_scan_barcode"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:enabled="false"
            android:text="@string/action_search_product"
            app:layout_column="1"
            app:layout_row="0" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>